--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a class="l1" href="#top">Cima</a></li>
-                    <li><a class="l2" href="#about">Chi siamo?</a></li>
+                    <li><a class="l2" href="#top">Chi siamo?</a></li>
                     <li><a class="l3" href="index.html">Gli argomenti</a></li>
                     <li><a class="l4" href="esercizi.html">Gli esercizi</a></li>
                 </ul>
@@ -36,7 +36,7 @@
             <h3 class="titleOfGetting">Chi Siamo?</h3>
             <img class="img" id="img" src="img/Don_Bosco_logo.jpg">
 
-            <p class="ttbel">Siamo gli studenti dell'instituto tecnico industriale Don Bosco (Settore informatica).
+            <p class="ttbel">Siamo gli studenti dell'instituto tecnico industriale Don Bosco (Settore informatico).
             </p>
 
 
@@ -79,9 +79,8 @@
                 <li><a href="#" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
                 <li><a href="#" target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
             </ul>
-            <p>&copy; <script>document.write(new Date().getFullYear())</script> It sure is fun create websites.</p>
-            <p>&ldquo;Istituto salesiano Don Bosco (2019/2020).</p>
-            <li><a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a></li>
+            <p>Istituto salesiano Don Bosco (2019/2020).</p>
+            <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a>
            <dl>
                 <dt>Sopravisionato da:</dt>
                 <dd style="font-size: small; color: rgb(160, 159, 159);">prof: Mohamed Gawish</dd>
