--- a/index.html
+++ b/index.html
@@ -253,9 +253,10 @@
                 <li><a href="#" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
                 <li><a href="#" target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
             </ul>
-            <p>&copy; <script>document.write(new Date().getFullYear())</script> It sure is fun create websites.</p>
-            <p>&ldquo;Istituto salesiano Don Bosco (2019/2020).</p>
-            <li><a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a></li>
+
+            <p>Istituto salesiano Don Bosco (2019/2020).</p>
+            <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
+            <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a>
            <dl>
                 <dt>Sopravisionato da:</dt>
                 <dd style="font-size: small; color: rgb(160, 159, 159);">prof: Mohamed Gawish</dd>
