--- a/esercizi.html
+++ b/esercizi.html
@@ -26,7 +26,7 @@
                     <li><a class="l1" href="#top">Cima</a></li>
                     <li><a class="l2" href="about-us.html">Chi siamo?</a></li>
                     <li><a class="l3" href="index.html">Gli argomenti</a></li>
-                    <li><a class="l4" href="#gallery">Gli esercizi</a></li>
+                    <li><a class="l4" href="#top">Gli esercizi</a></li>
                 </ul>
             </nav>
         </header>
@@ -113,14 +113,14 @@
                 <li><a href="#" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
                 <li><a href="#" target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
             </ul>
-            <p>&copy; <script>document.write(new Date().getFullYear())</script> It sure is fun create websites.</p>
-            <p>&ldquo;Istituto salesiano Don Bosco (2019/2020).</p>
-            <li><a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a></li>
+            <p>Istituto salesiano Don Bosco (2019/2020).</p>
+            <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a>
            <dl>
                 <dt>Sopravisionato da:</dt>
                 <dd style="font-size: small; color: rgb(160, 159, 159);">prof: Mohamed Gawish</dd>
             </dl>
             <br>
+        </footer>
         <script type="text/javascript">
             $(document).ready(function(){
             $('a[href^="#"]').on('click',function (e) {e.preventDefault();
