--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@
 		       var $target = $(target);
 
 		       $('html, body').stop().animate({
-	                'scrollTop': $target.offset().top-100
+	                'scrollTop': $target.offset().top-100,
 		       }, 900, 'swing', function () {
 	               window.location.hash = target-100;
 		       });
 	       });
         });
-        
+
         </script>
     </body>
 </html>
