--- a/about-us.html
+++ b/about-us.html
@@ -51,17 +51,17 @@
                 <li>
                     <img class="img" src="img/IMG_20200526_230411.jpg">
                     <h4>Abanoub Wagih</h4>
-                    <p class="meddile">Èta: 18 <br> C++ Developer <br> Web Developer <br> Python Developer</p>
+                    <p class="meddile">Età: 18 <br> C++ Developer <br> Web Developer <br> Python Developer</p>
                 </li>
                 <li>
                     <img class="img" src="img/400015800837_163833.jpg">
                     <h4>Fady Samir</h4>
-                    <p class="right">Èta: 18 <br> C++ Developer <br> Web Developer <br> Android Developer<br></p>
+                    <p class="right">Età: 18 <br> C++ Developer <br> Web Developer <br> Android Developer<br></p>
                 </li>
                 <li>
                     <img class="img" src="img/IMG-20200526-WA0200.jpg">
                     <h4>Youssef Ashraf</h4>
-                    <p class="right">Èta: 18 <br> C++ Developer <br> Web Developer <br></p>
+                    <p class="right">Età: 18 <br> C++ Developer <br> Web Developer <br></p>
                 </li>
                 <li>
                     <img class="img" src="img/IMG-20200526-WA0217.jpg">
