--- a/about-us.html
+++ b/about-us.html
@@ -45,7 +45,7 @@
                 <li>
                     <img class="img" src="img/bishoy-kamel.jpg">
                     <h4>Bishoy Kamel</h4>
-                    <p class="left">Èta: 18 <br> C++ Developer <br> Web Developer <br> Android Developer</p>
+                    <p class="left">Età: 18 <br> C++ Developer <br> Web Developer <br> Android Developer</p>
                    
                 </li>
                 <li>
@@ -66,7 +66,7 @@
                 <li>
                     <img class="img" src="img/IMG-20200526-WA0217.jpg">
                     <h4>Raul Robery</h4>
-                    <p class="right">Èta: 18 <br> C++ Developer <br> Web Developer <br> Arduino Developer<br></p>
+                    <p class="right">Età: 18 <br> C++ Developer <br> Web Developer <br> Arduino Developer<br></p>
                 </li>
             </ul>
         </div>.
