--- a/about-us.html
+++ b/about-us.html
@@ -80,6 +80,7 @@
                 <li><a href="#" target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
             </ul>
             <p>Istituto salesiano Don Bosco (2019/2020).</p>
+            <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
             <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a>
            <dl>
                 <dt>Sopravisionato da:</dt>
