--- a/esercizi.html
+++ b/esercizi.html
@@ -108,10 +108,8 @@
         <br><br>
         <footer id="social-media">
             <ul>
-                <li><a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
+                <li><a href="https://www.facebook.com/DonBoscoCai" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UC1QbDALypMyxn5Qp4I4VXFA" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
             </ul>
             <p>Istituto salesiano Don Bosco (2019/2020).</p>
             <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
