--- a/about-us.html
+++ b/about-us.html
@@ -29,10 +29,10 @@
         <div id="hero">
             <div class="background-image"></div>
             <h1>Gestione File-System</h1>
-            <h3>Tu capirai come si organizza<br>cartelle nell computer</h3>
+            <h3>Tu capirai come si organizzano<br>le cartelle nel computer</h3>
         </div>
         <!-- ********************************* -->
-        <div id="getting-around">
+        <div id="chi_siamo">
             <h3 class="titleOfGetting">Chi Siamo?</h3>
             <img class="img" id="img" src="img/Don_Bosco_logo.jpg">
 
@@ -79,7 +79,7 @@
             </ul>
             <p>Istituto salesiano Don Bosco (2019/2020).</p>
             <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
-            <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a>
+            <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></a>
            <dl>
                 <dt>Sopravisionato da:</dt>
                 <dd style="font-size: small; color: rgb(160, 159, 159);">prof: Mohamed Gawish</dd>
