--- a/esercizi.html
+++ b/esercizi.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul>
                     <li><a class="l1" href="#top">Cima</a></li>
-                    <li><a class="l2" href="about-us.html">Chi siamo?</a></li>
+                    <li><a class="l2" href="index.html">Chi siamo?</a></li>
                     <li><a class="l3" href="index.html">Gli argomenti</a></li>
                     <li><a class="l4" href="#top">Gli esercizi</a></li>
                 </ul>
@@ -37,7 +37,7 @@
         <div id="hero">
             <div class="background-image"></div>
             <h1>Gestione File-System</h1>
-            <h3>Tu capirai come si organizza<br>le cartelle nell computer</h3>
+            <h3>Tu capirai come si organizzano<br>le cartelle nel computer</h3>
         </div>
 
         <br><br>
@@ -113,7 +113,7 @@
             </ul>
             <p>Istituto salesiano Don Bosco (2019/2020).</p>
             <p>&copy; <script>document.write(new Date().getFullYear())</script></p>
-            <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></i></a>
+            <a class="float-botton" href="#top"><i class="fas fa-arrow-up"></i></a>
            <dl>
                 <dt>Sopravisionato da:</dt>
                 <dd style="font-size: small; color: rgb(160, 159, 159);">prof: Mohamed Gawish</dd>
