--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             Un file system include anche un formato per specificare il percorso di un file attraverso la struttura delle directory. Un file viene inserito in una directory - o in una cartella nel sistema operativo Windows - o nella sottodirectory nel punto desiderato nella struttura ad albero. I PC e i sistemi operativi mobili dispongono di file system in cui i file sono collocati da qualche parte in una struttura ad albero gerarchica.
                             <br>
                             <br>
-                            Prima di creare file e directory sul supporto di archiviazione, è necessario creare le partizioni. Una partizione è una regione del disco rigido o altra memoria gestita separatamente dal sistema operativo. Un file system è contenuto nella partizione primaria e alcuni sistemi operativi consentono più partizioni su un disco. In questa situazione, se un file system viene danneggiato, i dati in una diversa partizione 
+                            Prima di creare file e directory sul supporto di archiviazione, è necessario creare le partizioni. Una partizione è una regione del disco rigido o altra memoria gestita separatamente dal sistema operativo. Un file system è contenuto nella partizione primaria e alcuni sistemi operativi consentono più partizioni su un disco. 
                         </p>
                     </article>
                     <p>&nbsp;</p>
