--- a/about-us.html
+++ b/about-us.html
@@ -65,7 +65,7 @@
                 </li>
                 <li>
                     <img class="img" src="img/IMG-20200526-WA0217.jpg">
-                    <h4>Raul Robery</h4>
+                    <h4>Raul Robert</h4>
                     <p class="right">Età: 18 <br> C++ Developer <br> Web Developer <br> Arduino Developer<br></p>
                 </li>
             </ul>
